fixed scrollbar

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,8 +1,29 @@
-/* Font Latin Modern */
+/* Generated by Font Squirrel (http://www.fontsquirrel.com) on March 12, 2015 */
 @font-face {
   font-family: 'latin_modern_roman';
-  src: url('fonts/latinModern/lmroman10-regular-webfont.eot');
-  src: url('fonts/latinModern/lmroman10-regular-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/latinModern/lmroman10-regular-webfont.woff2') format('woff2'), url('fonts/latinModern/lmroman10-regular-webfont.woff') format('woff'), url('fonts/latinModern/lmroman10-regular-webfont.ttf') format('truetype'), url('fonts/latinModern/lmroman10-regular-webfont.svg#latin_modern_roman10_regular') format('svg');
+  src: url('lmroman10-bold-webfont.eot');
+  src: url('lmroman10-bold-webfont.eot?#iefix') format('embedded-opentype'), url('lmroman10-bold-webfont.woff2') format('woff2'), url('lmroman10-bold-webfont.woff') format('woff'), url('lmroman10-bold-webfont.ttf') format('truetype'), url('lmroman10-bold-webfont.svg#latin_modern_roman10_bold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'latin_modern_roman';
+  src: url('lmroman10-bolditalic-webfont.eot');
+  src: url('lmroman10-bolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('lmroman10-bolditalic-webfont.woff2') format('woff2'), url('lmroman10-bolditalic-webfont.woff') format('woff'), url('lmroman10-bolditalic-webfont.ttf') format('truetype'), url('lmroman10-bolditalic-webfont.svg#latin_modern_roman10BdIt') format('svg');
+  font-weight: bold;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'latin_modern_roman';
+  src: url('lmroman10-italic-webfont.eot');
+  src: url('lmroman10-italic-webfont.eot?#iefix') format('embedded-opentype'), url('lmroman10-italic-webfont.woff2') format('woff2'), url('lmroman10-italic-webfont.woff') format('woff'), url('lmroman10-italic-webfont.ttf') format('truetype'), url('lmroman10-italic-webfont.svg#latin_modern_roman10_italic') format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'latin_modern_roman';
+  src: url('lmroman10-regular-webfont.eot');
+  src: url('lmroman10-regular-webfont.eot?#iefix') format('embedded-opentype'), url('lmroman10-regular-webfont.woff2') format('woff2'), url('lmroman10-regular-webfont.woff') format('woff'), url('lmroman10-regular-webfont.ttf') format('truetype'), url('lmroman10-regular-webfont.svg#latin_modern_roman10_regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -71,19 +92,6 @@ page[size="A4"] h2 {
 body {
   padding-top: 120px;
 }
-.pdfStyle {
-  font-family: 'latin_modern_roman';
-}
-.pdfStyle p,
-.pdfStyle li {
-  font-size: 11pt;
-}
-.pdfStyle h1 {
-  font-size: 14.4pt;
-}
-.pdfStyle h2 {
-  font-size: 12pt;
-}
 /* bootstrap 3 helpers */
 .navbar {
   margin-bottom: 0;
@@ -97,4 +105,7 @@ body {
   border-bottom: 1px solid #E1E1E1;
   border-radius: 0;
   padding: 8px 0px 0px 0px;
+}
+body.modal-open nav {
+  padding-right: 15px;
 }
